Trying to debug why triangle normals aren't consistent - going to change up how I calculate faces

--- a/geodesics.ipynb
+++ b/geodesics.ipynb
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -79,10 +79,20 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "63c8720504ff49f2be35baab77830831"
+       "model_id": "9ed37e1f59874086835ba433bba935d9"
       }
      },
      "metadata": {}
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 30
     }
    ],
    "source": [
@@ -94,7 +104,10 @@
     "gv = geo_vase.GeoVase(\n",
     "    rows=8\n",
     ")\n",
-    "p = mp.plot(np.array(gv.verts), np.array(gv.triangles))\n"
+    "p = mp.plot(np.array(gv.verts), np.array(gv.triangles))\n",
+    "p.add_points(np.array(gv.verts)[[16, 0, 9], :], shading={\"point_size\": 0.1})\n",
+    "vs = np.array(gv.verts)[[16, 9], :]\n",
+    "p.add_points(vs, c=np.zeros(vs.shape), shading={\"point_size\": 0.2})"
    ]
   },
   {
