Calculate triangular faces in an ordered manner.

--- a/geodesics.ipynb
+++ b/geodesics.ipynb
@@ -69,30 +69,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "output_type": "display_data",
      "data": {
-      "text/plain": "Renderer(camera=PerspectiveCamera(children=(DirectionalLight(color='white', intensity=0.6, position=(0.0, 0.62…",
+      "text/plain": "Renderer(camera=PerspectiveCamera(children=(DirectionalLight(color='white', intensity=0.6, position=(-0.014583…",
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "9ed37e1f59874086835ba433bba935d9"
+       "model_id": "feb2f6a012ec45faab29f01043c9625b"
       }
      },
      "metadata": {}
-    },
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "2"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 30
     }
    ],
    "source": [
@@ -102,12 +92,10 @@
     "import geo_vase\n",
     "\n",
     "gv = geo_vase.GeoVase(\n",
-    "    rows=8\n",
+    "    rows=7,\n",
+    "    sides=5\n",
     ")\n",
-    "p = mp.plot(np.array(gv.verts), np.array(gv.triangles))\n",
-    "p.add_points(np.array(gv.verts)[[16, 0, 9], :], shading={\"point_size\": 0.1})\n",
-    "vs = np.array(gv.verts)[[16, 9], :]\n",
-    "p.add_points(vs, c=np.zeros(vs.shape), shading={\"point_size\": 0.2})"
+    "p = mp.plot(np.array(gv.verts), np.array(gv.triangles), shading={\"point_size\": 0.1})\n"
    ]
   },
   {
